--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,4 +4,6 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/tra931/Aidaxtech.com/
     - /bin/cp index.php $DEPLOYPATH
+    - /bin/cp -R lib $DEPLOYPATH
+    - /bin/cp -R user $DEPLOYPATH
 
