--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,5 +3,8 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/tra931/Aidaxtech.com/
+    - /bin/cp -R user $DEPLOYPATH
+    - /bin/cp -R lib $DEPLOYPATH
+    - /bin/cp -R asset $DEPLOYPATH
     - /bin/cp index.php $DEPLOYPATH
 
