--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,7 +3,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/tra931/Aidaxtech.com/
-    - /bin/cp -R user $DEPLOYPATH
-    - /bin/cp -R lib $DEPLOYPATH
-    - /bin/cp index.php $DEPLOYPATH
-
+    - /bin/cp index.js $DEPLOYPATH
+    - /bin/cp package.json $DEPLOYPATH
